Prevented horizontal overflow scroll by giving container a max-width

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,6 +23,10 @@ a {
   background-color: #fff;
 }
 
+@media only screen and (max-width: 995px) {
+  .container { max-width: 75%; }
+}
+
 .box-shadow {
   box-shadow: 8px 8px 2px 1px rgba(0, 0, 255, .1);
 }
@@ -110,7 +114,7 @@ nav li:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
+  width: 75%;
 }
 
 @media only screen and (max-width: 1387px) {
@@ -121,7 +125,7 @@ nav li:hover {
   .right { width: 80%; }
 }
 
-@media only screen and (max-width: 610px) {
+@media only screen and (max-width: 710px) {
   .tagline { font-size: 2.7rem; }
 }
 
